# calisthenics_bot

./: .gitignore  dbhelpers.py  pyproject.toml  readme.md  start_app.sh  telegram_bot.py
DB/: Calisthenics  Calisthenics.sqbpro  ExerciseInPlan
